# qsolog

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: throughput.rs
src/: lib.rs  op.rs  qso.rs  types.rs
src/core/: indices.rs  mod.rs  store.rs
src/engine/: mod.rs  projector.rs  traits.rs
src/persist/: mod.rs  schema.sql  sqlite.rs
src/runtime/: events.rs  handle.rs  mod.rs
tests/: core_undo.rs  engine_incremental.rs  property_invariants.rs  runtime_smoke.rs  sqlite_replay.rs
