[package]
name = "qsolog"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1"
tempfile = "3"

[[bench]]
name = "throughput"
harness = false
